hphp/hack/test/typecheck/inline_function.php
<?hh // partial
function foo() : void {
  if(true) {
    function bar() {}
  }
}
